--- a/lib/inn_web/templates/page/index.html.eex
+++ b/lib/inn_web/templates/page/index.html.eex
@@ -26,7 +26,7 @@
         <%= "#{number.status} | "%> <%= number.inserted_at %>
       </div>
     </li>
-    <%= true -> %>
+    <% true -> %>
     <% end %>
     <% end %>
   </ul>
